cmake_minimum_required(VERSION 3.18)
include_directories(include/)
message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -pthread")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

project(orchid_example)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../out)
    add_executable(orchid_example examples/sslclient/main.cpp)
    set_target_properties(orchid_example PROPERTIES OUTPUT_NAME orchid.o)
    target_link_libraries(orchid_example ssl)
    target_link_libraries(orchid_example crypto)